--- a/gui/api/com/untangle/gui/main/MMainJFrame.form
+++ b/gui/api/com/untangle/gui/main/MMainJFrame.form
@@ -20,7 +20,10 @@
     <EventHandler event="windowClosing" listener="java.awt.event.WindowListener" parameters="java.awt.event.WindowEvent" handler="exitForm"/>
   </Events>
   <AuxValues>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,-30,0,0,3,-10"/>
+    <AuxValue name="FormSettings_generateMnemonicsCode" type="java.lang.Boolean" value="false"/>
+    <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
+    <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
+    <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"/>
@@ -121,8 +124,8 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-                  <JTabbedPaneConstraints tabName="&lt;html&gt;&lt;b&gt;Store&lt;/b&gt;&lt;/html&gt;">
-                    <Property name="tabTitle" type="java.lang.String" value="&lt;html&gt;&lt;b&gt;Store&lt;/b&gt;&lt;/html&gt;"/>
+                  <JTabbedPaneConstraints tabName="&lt;html&gt;&lt;b&gt;Library&lt;/b&gt;&lt;/html&gt;">
+                    <Property name="tabTitle" type="java.lang.String" value="&lt;html&gt;&lt;b&gt;Library&lt;/b&gt;&lt;/html&gt;"/>
                   </JTabbedPaneConstraints>
                 </Constraint>
               </Constraints>
@@ -648,8 +651,8 @@
         <Property name="opaque" type="boolean" value="false"/>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="//((com.untangle.gui.pipeline.MPipelineJPanel)mPipelineJPanel).setMFilterJPanel((com.untangle.gui.filter.MFilterJPanel)mFilterJPanel);"/>
         <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new com.untangle.gui.pipeline.MPipelineJPanel();"/>
+        <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="//((com.untangle.gui.pipeline.MPipelineJPanel)mPipelineJPanel).setMFilterJPanel((com.untangle.gui.filter.MFilterJPanel)mFilterJPanel);"/>
       </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
