--- a/tran/ids/impl/com/untangle/node/ips/reports/IPSTopServers.jrxml
+++ b/tran/ids/impl/com/untangle/node/ips/reports/IPSTopServers.jrxml
@@ -2,7 +2,7 @@
 <!-- Created with iReport - A designer for JasperReports -->
 <!DOCTYPE jasperReport PUBLIC "//JasperReports//DTD Report Design//EN" "http://jasperreports.sourceforge.net/dtds/jasperreport.dtd">
 <jasperReport
-    name="IDSTopServers"
+    name="IPSTopServers"
     columnCount="1"
     printOrder="Vertical"
     orientation="Portrait"
