Updates to webstart to make links further apart
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@10849 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm/servlets/ROOT/root/images/base.css
+++ b/uvm/servlets/ROOT/root/images/base.css
@@ -93,6 +93,13 @@ hr {
 .main-top-right, .main-mid-right {
     background-position: 100% 0;
 }
+.main-reduced {
+	width: 500px; 
+	margin: 50px auto 0 auto;
+}
+.main-reduced a b {
+	line-height: 30px;
+}
 .page_head {
 	height: 110px;
 }
@@ -117,3 +124,5 @@ hr {
     font: bold 14pt arial,sans-serif;
     color: #777;
 }
+
+
