A little less space between paragraphs
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@11445 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm/servlets/ROOT/root/images/base.css
+++ b/uvm/servlets/ROOT/root/images/base.css
@@ -64,6 +64,9 @@ hr {
 	margin: 0; padding: 0;
 	clear: both;
 }
+p {
+	margin-bottom: 4px;
+}
 .main-top-left, .main-top-right, .main-bot-left, .main-bot-right {
     background-image: url(/images/bg_main_top_bot.gif);
     height: 23px;
