--- a/gui/api/com/untangle/gui/configuration/RemoteCertGenSelfSignedJDialog.form
+++ b/gui/api/com/untangle/gui/configuration/RemoteCertGenSelfSignedJDialog.form
@@ -15,6 +15,10 @@
     <SyntheticProperty name="formSizePolicy" type="int" value="2"/>
   </SyntheticProperties>
   <AuxValues>
+    <AuxValue name="FormSettings_generateMnemonicsCode" type="java.lang.Boolean" value="false"/>
+    <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
+    <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
+    <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
     <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,2,81,0,0,2,122"/>
   </AuxValues>
 
@@ -301,7 +305,6 @@
               <Image iconType="3" name="/com/untangle/gui/images/IconCancel_16x16.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Cancel"/>
-            <Property name="horizontalTextPosition" type="int" value="0"/>
             <Property name="margin" type="java.awt.Insets" editor="org.netbeans.beaninfo.editors.InsetsEditor">
               <Insets value="[4, 8, 4, 8]"/>
             </Property>
