--- a/gui/api/com/untangle/gui/login/InitialSetupLicenseJPanel.form
+++ b/gui/api/com/untangle/gui/login/InitialSetupLicenseJPanel.form
@@ -35,7 +35,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Dialog" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="&lt;html&gt;Please read and accept the following license agreement before proceeding.&lt;br&gt;  &lt;b&gt;&lt;font color=&quot;#FF0000&quot;&gt;You must scroll to the bottom before you can accept.&lt;/font&gt;&lt;/b&gt;&lt;/html&gt;"/>
+            <Property name="text" type="java.lang.String" value="&lt;html&gt;License Agreement&lt;/html&gt;"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
