--- a/mail-casing/impl/resources/com/untangle/node/mail/impl/quarantine/DigestEmail_HTML.vm
+++ b/mail-casing/impl/resources/com/untangle/node/mail/impl/quarantine/DigestEmail_HTML.vm
@@ -542,7 +542,7 @@ hr {
         #end
 
         <br/>
-    <center>Powered by Untangle&trade; Network Gateway</center>
+    <center>Powered by Untangle&trade;</center>
 
           <hr size="1" width="100%"/>
         </td>
