--- a/gui/api/com/untangle/gui/node/MNodeJPanel.form
+++ b/gui/api/com/untangle/gui/node/MNodeJPanel.form
@@ -25,7 +25,7 @@
     <Property name="useNullLayout" type="boolean" value="false"/>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JLabel" name="descriptionTextJLabel">
+    <Component class="AAJLabel" name="descriptionTextJLabel">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Arial" size="18" style="0"/>
@@ -209,7 +209,7 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JLabel" name="messageTextJLabel">
+    <Component class="AAJLabel" name="messageTextJLabel">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Arial" size="12" style="1"/>
