--- a/gui/api/com/untangle/gui/widgets/premium/PremiumJPanel.form
+++ b/gui/api/com/untangle/gui/widgets/premium/PremiumJPanel.form
@@ -4,7 +4,7 @@
   <Properties>
     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
       <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-        <TitledBorder title="Premium Feature"/>
+        <TitledBorder title="Professional Package Feature"/>
       </Border>
     </Property>
   </Properties>
@@ -22,7 +22,7 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="&lt;html&gt;&lt;center&gt;&lt;b&gt;This is a premium feature that is unavailable in the standard version.&lt;br&gt;You can purchase this feature from the Library.&lt;/b&gt;&lt;/center&gt;&lt;/html&gt;"/>
+        <Property name="text" type="java.lang.String" value="&lt;html&gt;&lt;center&gt;&lt;b&gt;This feature is enabled when the Professional Package is installed.&lt;br&gt;You can purchase this package from the Library.&lt;/b&gt;&lt;/center&gt;&lt;/html&gt;"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
