make hard to read green text darker, untangle green
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@12031 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/mail-casing/impl/resources/com/untangle/node/mail/impl/quarantine/DigestEmail_HTML.vm
+++ b/mail-casing/impl/resources/com/untangle/node/mail/impl/quarantine/DigestEmail_HTML.vm
@@ -152,9 +152,10 @@ table.actions tbody TD + TD {
   padding-bottom: 10;
 }
 
+/* #68BD49 is Untangle green*/
 .messageText {
   font: normal 20 Arial, Geneva;
-  color: #00ff00;
+  color: #68BD49;
   padding-left: 10;
   padding-right: 10;
   padding-bottom: 10;
