--- a/gui/api/com/untangle/gui/configuration/DirectoryRemoteADJPanel.form
+++ b/gui/api/com/untangle/gui/configuration/DirectoryRemoteADJPanel.form
@@ -60,7 +60,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Dialog" size="12" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="&lt;html&gt;This allows the Untangle Server to connect to an &lt;b&gt;Active Directory Server&lt;/b&gt; in order to recognize various users for use in reporting, firewall, router, policies, etc.&lt;/html&gt;"/>
+                <Property name="text" type="java.lang.String" value="&lt;html&gt;This allows your server to connect to an &lt;b&gt;Active Directory Server&lt;/b&gt; in order to recognize various users for use in reporting, firewall, router, policies, etc.&lt;/html&gt;"/>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
