Bug 3194 Secure Crossing rebrand changes
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@12091 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/gui/api/com/untangle/gui/configuration/NetworkIPJPanel.form
+++ b/gui/api/com/untangle/gui/configuration/NetworkIPJPanel.form
@@ -335,7 +335,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Dialog" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="&lt;html&gt;The &lt;b&gt;Connectivity Test&lt;/b&gt; tells you if the Untangle Server can contact DNS and the internet.&lt;/html&gt;"/>
+            <Property name="text" type="java.lang.String" value="&lt;html&gt;The &lt;b&gt;Connectivity Test&lt;/b&gt; tells you if the server can contact DNS and the internet.&lt;/html&gt;"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
