--- a/gui/api/com/untangle/gui/configuration/MaintenanceAccessJPanel.form
+++ b/gui/api/com/untangle/gui/configuration/MaintenanceAccessJPanel.form
@@ -26,7 +26,7 @@
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder title="Untangle Support">
+            <TitledBorder title="Support">
               <Font PropertyName="font" name="Dialog" size="16" style="1"/>
             </TitledBorder>
           </Border>
