--- a/gui/api/com/untangle/gui/configuration/NetworkHostnameJPanel.form
+++ b/gui/api/com/untangle/gui/configuration/NetworkHostnameJPanel.form
@@ -45,7 +45,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Dialog" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="&lt;html&gt;The Hostname is the name that Untangle Server will be known as on your network.&lt;/html&gt;"/>
+            <Property name="text" type="java.lang.String" value="&lt;html&gt;The name of the server.&lt;/html&gt;"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
@@ -115,7 +115,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Dialog" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="&lt;html&gt;If your hostname resolves publicly (the name resolves to an IP address from anywhere on the Internet), then the Untangle Server can make use of its hostname when generating emails, etc.  This will make contacting Untangle easier.  (If you enable Dynamic DNS, then your hostname automatically resolves publicly.)&lt;/html&gt;"/>
+            <Property name="text" type="java.lang.String" value="&lt;html&gt;If your hostname resolves publicly (the name resolves to an IP address from anywhere on the Internet), then the server can make use of its hostname when generating emails, etc.  This will make contacting support easier.  (If you enable Dynamic DNS, then your hostname automatically resolves publicly.)&lt;/html&gt;"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
@@ -158,7 +158,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Dialog" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="&lt;html&gt; By using a Dynamic DNS service provider, the Untangle Server can have a specific hostname assigned to a dynamically changing public IP address.&lt;/html&gt;"/>
+            <Property name="text" type="java.lang.String" value="&lt;html&gt;By using a Dynamic DNS service provider, the server can have a specific hostname assigned to a dynamically changing public IP address.&lt;/html&gt;"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
