ad users dialog
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@13050 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/gui/api/com/untangle/gui/configuration/DirectoryRemoteADJPanel.form
+++ b/gui/api/com/untangle/gui/configuration/DirectoryRemoteADJPanel.form
@@ -77,6 +77,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Dialog" size="12" style="0"/>
                 </Property>
+                <Property name="selected" type="boolean" value="true"/>
                 <Property name="text" type="java.lang.String" value="&lt;html&gt;&lt;b&gt;Disabled&lt;/b&gt;&lt;/html&gt;"/>
                 <Property name="actionCommand" type="java.lang.String" value="&lt;html&gt;&lt;b&gt;Use DHCP&lt;/b&gt; to automatically set Untangle&apos;s IP address from the network&apos;s DHCP server.&lt;/html&gt;"/>
               </Properties>
