--- a/gui/api/com/untangle/gui/configuration/AdlsJPanel.form
+++ b/gui/api/com/untangle/gui/configuration/AdlsJPanel.form
@@ -292,10 +292,7 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Dialog" size="12" style="0"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="&lt;html&gt;Please cut and paste the address below into your browser.&lt;/html&gt;"/>
-                    <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="null"/>
-                    </Property>
+                    <Property name="text" type="java.lang.String" value="Please cut and paste the address below into your browser."/>
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
