added new field
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@13157 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/reporting/gui/com/untangle/node/reporting/gui/GenerationConfigJPanel.form
+++ b/reporting/gui/com/untangle/node/reporting/gui/GenerationConfigJPanel.form
@@ -459,15 +459,15 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JCheckBox" name="includeIncidentsJCheckBox1">
+            <Component class="javax.swing.JCheckBox" name="keepAWeekJCheckBox">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Dialog" size="12" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="&lt;html&gt;&lt;b&gt;Keep One Week&apos;s Datay&lt;/b&gt; - limits data retention to one week, this allows reports to run faster on high traffic sites.&lt;/html&gt;"/>
+                <Property name="text" type="java.lang.String" value="&lt;html&gt;&lt;b&gt;Keep One Week&apos;s Data&lt;/b&gt; - limits data retention to one week, this allows reports to run faster on high traffic sites.&lt;/html&gt;"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="includeIncidentsJCheckBox1ActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="keepAWeekJCheckBoxActionPerformed"/>
               </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
