--- a/reporting/gui/com/untangle/node/reporting/gui/GenerationConfigJPanel.form
+++ b/reporting/gui/com/untangle/node/reporting/gui/GenerationConfigJPanel.form
@@ -374,7 +374,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Dialog" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="&lt;html&gt;This report is delivered at midnight and covers events from the previous 30 days, up to, but not including the day of delivery.&lt;/html&gt;"/>
+            <Property name="text" type="java.lang.String" value="This report is delivered at midnight and covers events from the previous 30 days, up to, but not including the day of delivery."/>
             <Property name="focusable" type="boolean" value="false"/>
           </Properties>
           <Constraints>
